@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-20T01:24:55Z",
+  "timestamp" : "2022-08-20T08:19:26Z",
   "count_outdated" : 470,
   "uniques_outdated" : 268,
-  "count" : 491,
+  "count" : 490,
   "uniques" : 284,
   "clones" : [
     {
       "timestamp": "2022-08-06T00:00:00Z",
-      "count": 4,
+      "count": 3,
       "count_minmax": [ 1, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
